--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ button:hover{
 	text-align: center;
 }
 .card:hover{
-  box-shadow: #f9004d;
+  box-shadow: 20px 20px 50px rgb(117, 230, 255);
 }
 .card i{
 	font-size: 50px;
