--- a/style.css
+++ b/style.css
@@ -315,8 +315,10 @@ button:hover{
 	overflow: hidden;
 	text-align: center;
 }
-.card:hover{
+.box.card:hover{
   box-shadow: 20px 20px 50px rgb(117, 230, 255);
+  background-color: #f9004d;
+  border: 1px solid #f9004d;
 }
 .card i{
 	font-size: 50px;
