--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a{
 }
 
 .back-img{
-  background-image: url('/content/bg.jpg');
+  background-image: url('bg.jpg');
   background-repeat: no-repeat;
   width: 100%;
   height: 890px;
