--- a/style.css
+++ b/style.css
@@ -441,3 +441,36 @@ footer p:nth-child(2){
 	bottom: 35px;
 	font-size: 14px; 
 }
+
+
+@media screen and (max-width: 600px){
+    
+  body{
+      background-color: rgb(197, 146, 146);
+      width: 100%;
+      height: 100vh;
+    }
+    .nav-bar{
+      background-color: #80c9e6;
+      height: 6vh;
+      width: 950px;
+    }
+
+    .nav-left{
+      color: #fbfcfc;
+      justify-content: space-between;
+      font-size: 12px;
+      left: 0;
+    
+    }
+    .back-img{
+      background-image: url('bg.jpg');
+      background-repeat: no-repeat;
+      width: 300px;
+      height: 80vh;
+      background-size: cover;
+      opacity: 0.9;
+    }
+    
+
+}
